# nixos-cluster-manager

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  om.yaml
.agent/personas/: HEADER.md
.agent/personas/engineering/architect/: PERSONA.md
.agent/personas/engineering/devops-engineer/: PERSONA.md
.agent/personas/engineering/qa/: PERSONA.md
.agent/personas/engineering/senior-software-engineer/: PERSONA.md
.agent/rules/: HEADER.md
.agent/skills/: HEADER.md
.agent/skills/conventional-commits/: SKILL.md
.agent/skills/nix-runner/: SKILL.md
.agent/tooling/: HEADER.md
.github/: mergify.yml
.specs/: 01_overview.md  02_inventory_spec.md  03_cli_spec.md
.specs/inventory_spec/: 01_users.md  02_machines.md  03_services.md  04_secrets.md  05_deploy.md
crates/bins/ncm/: Cargo.toml
crates/bins/ncm/src/: lib.rs  main.rs
crates/bins/ncm/src/cli/: mod.rs
crates/bins/ncm/src/cli/commands/: backup.rs  bootstrap.rs  deploy.rs  manage.rs  mod.rs  restore.rs  validate.rs
crates/bins/ncm/src/cli/tests/: backup.rs  bootstrap.rs  debug.rs  deploy.rs  mod.rs  restore.rs  validate.rs
crates/bins/ncm/src/cli/tests/manage/: machine.rs  mod.rs  secret.rs  service.rs  user.rs
crates/libs/ncm-core/: Cargo.toml
crates/libs/ncm-inventory/: Cargo.toml
crates/libs/ncm-inventory/nix/: test_deploy_inventory.nix  test_machine_inventory.nix  test_secret_inventory.nix  test_service_inventory.nix  test_user_inventory.nix
crates/libs/ncm-inventory/src/: lib.rs  parser.rs
crates/libs/ncm-inventory/src/types/: common.rs  deploy.rs  machines.rs  mod.rs  secrets.rs  services.rs  users.rs
crates/libs/ncm-inventory/tests/: integration_tests.rs
crates/libs/ncm-tui/: Cargo.toml
nix/checks/: validate-skills.nix  version-sync.nix  workspace-audit.nix  workspace-clippy.nix  workspace-coverage.nix  workspace-doc.nix  workspace-doctest.nix  workspace-nextest.nix  workspace-unify.nix
nix/devshells/: default.nix
nix/lib/: crane.nix  crate-sources.nix  default.nix  treefmt-config.nix  versions.nix
