[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = ["crates/bins/*", "crates/libs/*"]

[workspace.dependencies]
ncm-core = { path = "crates/libs/ncm-core" }
ncm-tui = { path = "crates/libs/ncm-tui" }
anyhow = "^1.0.100"
base64 = "^0.22.1"
chrono = { version = "^0.4.42", features = ["serde"] }
clap = { version = "^4.5.60", features = ["derive", "env"] }
colored = "^2.2.0"
derive_more = { version = "^2.1.1", features = ["display", "from", "into"] }
dioxus = { version = "0.7.1", features = ["fullstack", "router"] }
mockall = "^0.13.1"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = "^1.0.149"
thiserror = "^2.0.17"
tokio = { version = "^1.48.0", features = ["full"] }
tracing = { version = "^0.1.44" }
uuid = { version = "^1.19.0", features = ["js", "serde", "v4"] }
wasm-bindgen = { version = "= 0.2.105" }

[workspace.package]
rust-version = "1.86.0"
version = "0.1.0"
edition = "2024"
