[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = ["crates/bins/*", "crates/libs/*"]

[workspace.dependencies]
ncm-core = { path = "crates/libs/ncm-core" }
ncm-tui = { path = "crates/libs/ncm-tui" }

[workspace.package]
rust-version = "1.86.0"
version = "0.1.0"
edition = "2024"
