[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
resolver = "2"
members = ["crates/bins/*", "crates/libs/*"]

[workspace.dependencies]
anyhow = "1.0"
duct = "1.1.1"
ncm-core = { path = "crates/libs/ncm-core" }
ncm-inventory = { path = "crates/libs/ncm-inventory" }
ncm-tui = { path = "crates/libs/ncm-tui" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"

[workspace.package]
rust-version = "1.87.0"
version = "0.1.0"
edition = "2024"
