[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[package]
name = "ncm"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
