[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ncm-core = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.5"
proptest-derive = "0.5"

[package]
name = "ncm"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
